<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/main_tv_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_total_amount" />

        <TextView
            android:id="@+id/main_tv_camera_first_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_first_amount" />

        <TextView
            android:id="@+id/main_tv_camera_first_iso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_first_iso" />

        <TextView
            android:id="@+id/main_tv_back_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_back_amount" />

        <TextView
            android:id="@+id/main_tv_camera_back_iso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_back_iso" />

        <TextView
            android:id="@+id/main_tv_camera_back_iso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="Take a photo: " />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="By Default" />

            <Button
                android:id="@+id/button1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="By Custom" />
        </LinearLayout>
    </LinearLayout>
	
    <ImageView
        android:background="#f4f4f4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter" />

</LinearLayout>